[package]
name = "tower-fallback"
version = "0.2.17"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
license = "MIT"
edition = "2021"

[dependencies]
tower = "0.4"
futures-core = "0.3.19"
pin-project = "1.0.10"
tracing = "0.1"

[dev-dependencies]
zebra-test = { path = "../zebra-test/" }
tokio = { version = "1.16.1", features = ["full"]}
